--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         /* 输入框样式 */
         textarea {
             width: 100%;
+            height: 200px;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -162,7 +163,9 @@
     <h1>Batch Processing Tool</h1>
 
     <label for="input">Input Lines (Tab-separated):</label>
-    <textarea id="input" placeholder="Enter lines here..."></textarea>
+    <textarea id="input" placeholder="Enter lines here like...
+测试53	佐贺美阵[J]	1
+测试54	守泽千秋[L]	2"></textarea>
 
     <button id="processButton">Process</button>
 
