--- a/index.html
+++ b/index.html
@@ -166,14 +166,15 @@ Zhong	守泽千秋[L]	2"></textarea>
 
                 if (tempRec.length === batchSize) {
                     const minRemainRec = tempRec.reduce((min, rec) => rec.remainNumber < min.remainNumber ? rec : min);
+                    const subNumber = minRemainRec.remainNumber;
                     const collect = tempRec.map(rec => rec.character).sort();
                     for (let i = 0; i < minRemainRec.remainNumber; i++) {
                         resultSet.push(collect);
                     }
                     tempRec.sort((a, b) => b.remainNumber - a.remainNumber)
                     tempRec.forEach(rec => {
-                        rec.orderNum += minRemainRec.remainNumber
-                        rec.remainNumber -= minRemainRec.remainNumber
+                        rec.orderNum += minRemainRec.subNumber
+                        rec.remainNumber -= minRemainRec.subNumber
 
                     });
                     tempRec = tempRec.filter(rec => rec.remainNumber > 0);
