set sample text

--- a/index.html
+++ b/index.html
@@ -242,7 +242,10 @@
         <div class="section">
             <h1>Order Processing</h1>
             <label for="inputArea">Input (Tab-Separated Data):</label>
-            <textarea id="inputArea" placeholder="Enter your data here (e.g. CN1\tA\t5)..."></textarea>
+            <textarea id="inputArea" placeholder="Enter your data here like:
+Ren	樱河琥珀	2
+Ren	白鸟蓝良	2
+            "></textarea>
             <button onclick="handleProcess()">Process</button>
         </div>
 
